# lamco-rdp-tools

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
doc/: rdpdo.1  rdpsee.1
docs/: README.md
docs/explanation/: codecs-and-graphics.md  connection-and-security.md  fingerprint-scheme.md  observe-vs-act.md  visual-matching-and-needles.md
docs/how-to/: automate-login.md  calibrate-clicks.md  capture-screenshots.md  fingerprint-inventory.md  inspect-certificate.md  provision-vm.md  record-replay.md  scan-subnet-ci.md  verify-audio.md  visual-regression-ci.md
docs/reference/: exit-codes.md  json-output.md
docs/tutorial/: getting-started.md
docs/use-cases/: accessibility-verification.md  ci-visual-testing.md  fleet-inventory.md  golden-image-validation.md  security-recon-audit.md  vdi-baselining.md
profiles/: calibration.html
profiles/accept-portal/: cosmic.rdpdo-script  gnome46.rdpdo-script  gnome49.rdpdo-script  hyprland.rdpdo-script  kde.rdpdo-script  niri.rdpdo-script  sway.rdpdo-script
profiles/login/: default.rdpdo-script  domain.rdpdo-script  windows.rdpdo-script
profiles/unlock/: default.rdpdo-script  kde.rdpdo-script
src/: audio.rs  calibrate.rs  capture.rs  cert.rs  cli.rs  clipboard.rs  connection.rs  coords.rs  fingerprint.rs  gfx.rs  help.rs  input.rs  lib.rs  matching.rs  needle.rs  pixel.rs  probe.rs  provision.rs  rdpdo.rs  rdpsee.rs  recorder.rs  report.rs  script.rs  session.rs
